searchbar-fix overlap

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -40,8 +40,9 @@ body {
       }
 
 .ms-n5 {
-    margin-left: -40px;
+    margin-left: -15px;
 }
+
 
 
 
